--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-typescript-userscript-boilerplate",
+  "name": "beatsaver-tools",
   "version": "1.0.0",
   "description": "",
   "main": "dist/bundle.js",
