--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/runtime": "^7.13.10",
     "evergreen-ui": "^5.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^6.15.5"
   }
 }
